--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>NIMA JUICE - Segarnya Buah Asli</title>
+<title>NIMA JUICE - Honest Juice, Real Flavor</title>
 
 <!-- Tailwind & Fonts -->
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
@@ -61,13 +61,13 @@ tailwind.config = {
           NIMA <span class="text-primary bg-[#1c1b0d] px-2 rounded-lg">JUICE</span>
         </h1>
         <h2 class="text-[#1c1b0d]/70 dark:text-white/70 text-base font-medium leading-normal max-w-[280px] mx-auto">
-          Segarnya Buah Asli di Setiap Tetesan Tanpa Pengawet
+          Honest Juice, Real Flavor
         </h2>
       </div>
 
       <div class="flex gap-3 mt-6">
         <button id="lihat-menu" class="flex min-w-[140px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-primary text-[#1c1b0d] text-base font-bold leading-normal tracking-[0.015em] shadow-lg shadow-primary/30">
-          Lihat Menu
+          Click Me
         </button>
         <button id="order-wa" class="flex min-w-[140px] cursor-pointer items-center justify-center overflow-hidden rounded-full h-12 px-6 bg-white dark:bg-background-dark border-2 border-primary text-[#1c1b0d] dark:text-white text-base font-bold leading-normal tracking-[0.015em]">
           Order WA
@@ -113,10 +113,11 @@ tailwind.config = {
     <p class="text-xs font-medium opacity-80 italic">Bayar jadi mudah lewat QRIS</p>
   </div>
   <div class="bg-white p-4 rounded-xl shadow-xl">
-    <div class="size-40 bg-[#f8f8f5] flex items-center justify-center border-2 border-[#1c1b0d]/10 rounded-lg">
-      <span class="material-symbols-outlined text-8xl text-[#1c1b0d]">qr_code_2</span>
-    </div>
+  <div class="size-40 bg-[#f8f8f5] flex items-center justify-center border-2 border-[#1c1b0d]/10 rounded-lg">
+    <img src="https://drive.google.com/file/d/1my-ejhyCdxkMBVL_NdKxkXWqUX2G_Yzm/view?usp=drivesdk" alt="NIMA JUICE FOOD & DRINK" class="w-40 h-40 object-contain">
   </div>
+</div>
+
   <div class="flex flex-col gap-4 w-full">
     <div class="flex items-center gap-4 bg-white/20 p-4 rounded-full">
       <span class="material-symbols-outlined">schedule</span>
@@ -127,44 +128,61 @@ tailwind.config = {
     </div>
     <div class="flex items-center gap-4 bg-white/20 p-4 rounded-full">
       <span class="material-symbols-outlined">info</span>
-      <p class="text-sm font-medium">NIMA JUICE: Buah segar pilihan pasar pagi setiap hari.</p>
+      <p class="text-sm font-medium">Tidak Menerima Hutang</p>
     </div>
   </div>
 </div>
 
-<!-- Location Section -->
+<!-- Location Section (Google Maps Embed Link, no API key) -->
 <div class="px-4 py-8">
-<h3 class="text-[#1c1b0d] dark:text-white text-xl font-bold mb-4">📍 Lokasi Kami</h3>
-<div class="w-full h-60 rounded-xl overflow-hidden bg-gray-200 shadow-inner">
-  <div class="w-full h-full bg-cover bg-center relative" data-alt="Google Maps placeholder view of Bandung city" data-location="Bandung, Indonesia" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuCsqbNFAE0ye5CFzdjHxN2kr-pdfJYvd5TQWlj3E8d8DqXzoPi_-Fuoh9swfKGB0OmAU6T2GNOXP_dTvHJzzHYtwaDV8OLlZ6glS9lGjlaFZTOGp4r99lTf8UBZUT6yQP2JHlBPjZMQrTGIXgo3vyQkj73N78Fe70yftyqayon7z92VkGvsl1faEp5BJZ-N3sW0uwBAovetjvwc0WpndlKTQnuwROHAWPXO_sG55Tc1_B2WLuCY404Dn1QJx6SMHrKWTfIyrgwMS6fR");'>
-    <div class="absolute inset-0 bg-black/10 flex items-center justify-center">
-      <div class="bg-white p-2 rounded-full shadow-lg">
-        <span class="material-symbols-outlined text-red-600 text-4xl">location_on</span>
-      </div>
-    </div>
+  <h3 class="text-[#1c1b0d] dark:text-white text-xl font-bold mb-4">📍 Lokasi Kami</h3>
+
+  <div class="w-full h-60 rounded-xl overflow-hidden shadow-inner">
+    <iframe
+      class="w-full h-full rounded-xl"
+      src="https://www.google.com/maps?q=Jl.+Sanding+RT/RW+01/013,+Paseh,+Kab.Bandung,+Jawa+Barat&output=embed"
+      allowfullscreen
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
   </div>
+
+  <p class="mt-3 text-sm text-[#9c9549] dark:text-[#9c9549] font-medium cursor-pointer" id="alamat">
+    Jl. Sanding RT/RW 01/013, Paseh, Kab.Bandung, Jawa Barat.
+  </p>
 </div>
-<p class="mt-3 text-sm text-[#9c9549] dark:text-[#9c9549] font-medium cursor-pointer" id="alamat">Jl. Sanding RT/RW 01/013, Paseh, Kab.Bandung, Jawa Barat.</p>
-</div>
+
 
 <!-- Footer -->
 <footer class="bg-[#1c1b0d] text-white p-8 rounded-t-xl text-center">
 <h2 class="text-2xl font-black mb-2">NIMA <span class="text-primary">JUICE</span></h2>
 <p class="text-sm text-gray-400 mb-8 max-w-[240px] mx-auto italic">"Kesegaran yang membahagiakan harimu, satu gelas pada satu waktu."</p>
 <div class="flex justify-center gap-6 mb-8">
-  <a class="size-12 rounded-full bg-green-500 flex items-center justify-center text-white shadow-lg" href="#">
-    <span class="material-symbols-outlined">chat</span>
+  <!-- WhatsApp -->
+  <a class="size-12 rounded-full bg-green-500 flex items-center justify-center text-white shadow-lg" 
+     href="https://wa.me/6283829560114" target="_blank">
+    <span class="material-symbols-outlined">whatsapp</span>
   </a>
-  <a class="size-12 rounded-full bg-gradient-to-tr from-yellow-500 to-purple-600 flex items-center justify-center text-white shadow-lg" href="#">
-    <span class="material-symbols-outlined">photo_camera</span>
+
+  <!-- Instagram -->
+  <a class="size-12 rounded-full bg-gradient-to-tr from-yellow-500 to-purple-600 flex items-center justify-center text-white shadow-lg" 
+     href="https://instagram.com/nima.juice" target="_blank">
+    <span class="material-symbols-outlined">instagram</span>
   </a>
-  <a class="size-12 rounded-full bg-blue-600 flex items-center justify-center text-white shadow-lg" href="#">
-    <span class="material-symbols-outlined">social_leaderboard</span>
+
+  <!-- TikTok -->
+  <a class="size-12 rounded-full bg-blue-600 flex items-center justify-center text-white shadow-lg" 
+     href="https://www.tiktok.com/@nima.juice" target="_blank">
+    <span class="material-symbols-outlined">tiktok</span>
   </a>
-  <a class="size-12 rounded-full bg-black flex items-center justify-center text-white border border-white/20 shadow-lg" href="#">
-    <span class="material-symbols-outlined">play_arrow</span>
+
+  <!-- Facebook -->
+  <a class="size-12 rounded-full bg-black flex items-center justify-center text-white border border-white/20 shadow-lg" 
+     href="https://facebook.com/nimajuice" target="_blank">
+    <span class="material-symbols-outlined">facebook</span>
   </a>
 </div>
+
 <div class="h-px bg-white/10 w-full mb-6"></div>
 <p class="text-[10px] text-gray-500 uppercase tracking-[0.2em]">© 2026 NIMA JUICE</p>
 </footer>
