--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@ tailwind.config = {
   </div>
   <div class="bg-white p-4 rounded-xl shadow-xl">
   <div class="size-40 bg-[#f8f8f5] flex items-center justify-center border-2 border-[#1c1b0d]/10 rounded-lg">
-    <img src="https://drive.google.com/file/d/1my-ejhyCdxkMBVL_NdKxkXWqUX2G_Yzm/view?usp=drivesdk" alt="NIMA JUICE FOOD & DRINK" class="w-40 h-40 object-contain">
+    <img src="https://drive.google.com/uc?export=view&id=1my-ejhyCdxkMBVL_NdKxkXWqUX2G_Yzm
+" alt="NIMA JUICE FOOD & DRINK" class="w-40 h-40 object-contain">
   </div>
 </div>
 
@@ -159,29 +160,28 @@ tailwind.config = {
 <p class="text-sm text-gray-400 mb-8 max-w-[240px] mx-auto italic">"Kesegaran yang membahagiakan harimu, satu gelas pada satu waktu."</p>
 <div class="flex justify-center gap-6 mb-8">
   <!-- WhatsApp -->
-  <a class="size-12 rounded-full bg-green-500 flex items-center justify-center text-white shadow-lg" 
+  <a class="size-12 rounded-full bg-green-500 flex items-center justify-center shadow-lg" 
      href="https://wa.me/6283829560114" target="_blank">
-    <span class="material-symbols-outlined">whatsapp</span>
+    <img src="https://www.svgrepo.com/show/303147/whatsapp-icon-logo.svg" class="w-6 h-6" alt="WhatsApp">
   </a>
 
   <!-- Instagram -->
-  <a class="size-12 rounded-full bg-gradient-to-tr from-yellow-500 to-purple-600 flex items-center justify-center text-white shadow-lg" 
+  <a class="size-12 rounded-full bg-gradient-to-tr from-yellow-500 to-purple-600 flex items-center justify-center shadow-lg" 
      href="https://instagram.com/nima.juice" target="_blank">
-    <span class="material-symbols-outlined">instagram</span>
+    <img src="https://www.svgrepo.com/show/303145/instagram-2-1-logo.svg" class="w-6 h-6" alt="Instagram">
   </a>
 
   <!-- TikTok -->
-  <a class="size-12 rounded-full bg-blue-600 flex items-center justify-center text-white shadow-lg" 
+  <a class="size-12 rounded-full bg-black flex items-center justify-center shadow-lg" 
      href="https://www.tiktok.com/@nima.juice" target="_blank">
-    <span class="material-symbols-outlined">tiktok</span>
+    <img src="https://www.svgrepo.com/show/303260/tiktok-logo-logo.svg" class="w-6 h-6" alt="TikTok">
   </a>
 
   <!-- Facebook -->
-  <a class="size-12 rounded-full bg-black flex items-center justify-center text-white border border-white/20 shadow-lg" 
+  <a class="size-12 rounded-full bg-blue-600 flex items-center justify-center shadow-lg" 
      href="https://facebook.com/nimajuice" target="_blank">
-    <span class="material-symbols-outlined">facebook</span>
+    <img src="https://www.svgrepo.com/show/303113/facebook-icon-logo.svg" class="w-6 h-6" alt="Facebook">
   </a>
-</div>
 
 <div class="h-px bg-white/10 w-full mb-6"></div>
 <p class="text-[10px] text-gray-500 uppercase tracking-[0.2em]">© 2026 NIMA JUICE</p>
