--- a/index.html
+++ b/index.html
@@ -114,9 +114,10 @@ tailwind.config = {
   </div>
   <div class="bg-white p-4 rounded-xl shadow-xl">
   <div class="size-40 bg-[#f8f8f5] flex items-center justify-center border-2 border-[#1c1b0d]/10 rounded-lg">
-    <img src="https://drive.google.com/uc?export=view&id=1my-ejhyCdxkMBVL_NdKxkXWqUX2G_Yzm
-" alt="NIMA JUICE FOOD & DRINK" class="w-40 h-40 object-contain">
-  </div>
+    <img src="https://drive.google.com/uc?export=view&id=1my-ejhyCdxkMBVL_NdKxkXWqUX2G_Yzm" 
+         alt="NIMA JUICE FOOD & DRINK" class="w-40 h-40 object-contain">
+</div>
+
 </div>
 
   <div class="flex flex-col gap-4 w-full">
@@ -124,12 +125,12 @@ tailwind.config = {
       <span class="material-symbols-outlined">schedule</span>
       <div>
         <p class="text-xs font-bold uppercase tracking-wider">Jam Operasional</p>
-        <p class="text-sm font-medium">Buka Setiap Hari: 10:00 - 20:00</p>
+        <p class="text-sm font-medium">Buka Setiap Hari: 10:00 WIB - 20:00 WIB</p>
       </div>
     </div>
     <div class="flex items-center gap-4 bg-white/20 p-4 rounded-full">
       <span class="material-symbols-outlined">info</span>
-      <p class="text-sm font-medium">Tidak Menerima Hutang</p>
+      <p class="text-sm font-bold uppercase tracking-wide">Kadang Tutup Dadakan</p>
     </div>
   </div>
 </div>
@@ -160,27 +161,27 @@ tailwind.config = {
 <p class="text-sm text-gray-400 mb-8 max-w-[240px] mx-auto italic">"Kesegaran yang membahagiakan harimu, satu gelas pada satu waktu."</p>
 <div class="flex justify-center gap-6 mb-8">
   <!-- WhatsApp -->
-  <a class="size-12 rounded-full bg-green-500 flex items-center justify-center shadow-lg" 
+  <a class="w-12 h-12 rounded-full bg-green-500 flex items-center justify-center shadow-lg" 
      href="https://wa.me/6283829560114" target="_blank">
-    <img src="https://www.svgrepo.com/show/303147/whatsapp-icon-logo.svg" class="w-6 h-6" alt="WhatsApp">
+    <img src="https://www.svgrepo.com/show/303147/whatsapp-icon-logo.svg" class="w-6 h-6 block" alt="WhatsApp">
   </a>
 
   <!-- Instagram -->
-  <a class="size-12 rounded-full bg-gradient-to-tr from-yellow-500 to-purple-600 flex items-center justify-center shadow-lg" 
+  <a class="w-12 h-12 rounded-full bg-gradient-to-tr from-yellow-500 to-purple-600 flex items-center justify-center shadow-lg" 
      href="https://instagram.com/nima.juice" target="_blank">
-    <img src="https://www.svgrepo.com/show/303145/instagram-2-1-logo.svg" class="w-6 h-6" alt="Instagram">
+    <img src="https://www.svgrepo.com/show/303145/instagram-2-1-logo.svg" class="w-6 h-6 block" alt="Instagram">
   </a>
 
   <!-- TikTok -->
-  <a class="size-12 rounded-full bg-black flex items-center justify-center shadow-lg" 
+  <a class="w-12 h-12 rounded-full bg-black flex items-center justify-center shadow-lg" 
      href="https://www.tiktok.com/@nima.juice" target="_blank">
-    <img src="https://www.svgrepo.com/show/303260/tiktok-logo-logo.svg" class="w-6 h-6" alt="TikTok">
+    <img src="https://www.svgrepo.com/show/303260/tiktok-logo-logo.svg" class="w-6 h-6 block" alt="TikTok">
   </a>
 
   <!-- Facebook -->
-  <a class="size-12 rounded-full bg-blue-600 flex items-center justify-center shadow-lg" 
+  <a class="w-12 h-12 rounded-full bg-blue-600 flex items-center justify-center shadow-lg" 
      href="https://facebook.com/nimajuice" target="_blank">
-    <img src="https://www.svgrepo.com/show/303113/facebook-icon-logo.svg" class="w-6 h-6" alt="Facebook">
+    <img src="https://www.svgrepo.com/show/303113/facebook-icon-logo.svg" class="w-6 h-6 block" alt="Facebook">
   </a>
 
 <div class="h-px bg-white/10 w-full mb-6"></div>
