--- a/index.html
+++ b/index.html
@@ -189,3 +189,7 @@ tailwind.config = {
   <div class="h-px bg-white/10 w-full mb-2"></div>
   <p class="text-[10px] text-gray-500 uppercase tracking-[0.2em]">© 2026 NIMA JUICE</p>
 </footer>
+<!-- Custom JS -->
+<script src="script.js"></script>
+</body>
+</html>
