--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ tailwind.config = {
   </div>
   
   <div class="overflow-hidden relative w-full">
-    <div class="flex gap-4 animate-marquee" id="best-seller-cards">
+    <div id="best-seller-cards" class="flex gap-4">
       <!-- Best Seller cards akan diisi JS -->
     </div>
   </div>
