--- a/index.html
+++ b/index.html
@@ -83,11 +83,12 @@ tailwind.config = {
     <h2 class="absolute left-1/2 -translate-x-1/2 text-[#1c1b0d] dark:text-white text-[24px] font-bold leading-tight justify-center text-center tracking-[-0.015em]">🔥 Best Seller</h2>
   </div>
   
-  <div class="overflow-hidden relative w-full">
-    <div id="best-seller-cards" class="flex gap-4">
-      <!-- Best Seller cards akan diisi JS -->
-    </div>
+ <div class="overflow-hidden relative w-full h-[420px]">
+  <div id="best-seller-cards" class="relative w-full h-full">
+    <!-- cards dari JS -->
   </div>
+</div>
+
 </div>
 
 <!-- Menu Juice Section -->
