--- a/index.html
+++ b/index.html
@@ -83,12 +83,11 @@ tailwind.config = {
     <h2 class="absolute left-1/2 -translate-x-1/2 text-[#1c1b0d] dark:text-white text-[24px] font-bold leading-tight justify-center text-center tracking-[-0.015em]">🔥 Best Seller</h2>
   </div>
   
- <div class="overflow-hidden relative w-full h-[420px]">
+ <div class="relative w-full h-[420px] overflow-hidden">
   <div id="best-seller-cards" class="relative w-full h-full">
-    <!-- cards dari JS -->
+    <!-- card diisi JS -->
   </div>
 </div>
-
 </div>
 
 <!-- Menu Juice Section -->
