--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ tailwind.config = {
   
  <div class="relative w-full min-h-[70vh] overflow-hidden">
   <div id="best-seller-cards" class="relative w-full h-full">
-    <!-- card diisi JS -->
+    <!-- card on script.js -->
   </div>
 </div>
 </div>
@@ -94,7 +94,7 @@ tailwind.config = {
 <div class="px-4 py-6">
 <h3 class="text-[#1c1b0d] dark:text-white text-xl font-bold leading-tight tracking-[-0.015em] mb-4 border-l-4 border-primary pl-3">Menu Juice (10 Varian)</h3>
 <div class="grid grid-cols-1 gap-4" id="menu-juice">
-  <!-- Juice items akan diisi JS -->
+  <!-- Juice items on script.js -->
 </div>
 </div>
 
@@ -102,11 +102,11 @@ tailwind.config = {
 <div class="px-4 py-6">
 <h3 class="text-[#1c1b0d] dark:text-white text-xl font-bold leading-tight tracking-[-0.015em] mb-4 border-l-4 border-primary pl-3">Menu Non-Juice (4 Varian)</h3>
 <div class="grid grid-cols-2 gap-4" id="menu-nonjuice">
-  <!-- Non-Juice items akan diisi JS -->
+  <!-- Non-Juice items on script.js -->
 </div>
 </div>
 
-<!-- Operational & QR Info -->
+<!-- Information  -->
 <div class="m-4 p-6 bg-primary rounded-xl flex flex-col items-center gap-6 text-[#1c1b0d]">
   <div class="text-center">
     <h4 class="text-xl font-black mb-1">Scan to Order</h4>
@@ -134,7 +134,7 @@ tailwind.config = {
   </div>
 </div>
 
-<!-- Location Section (Google Maps Embed Link, no API key) -->
+<!-- Location Section -->
 <div class="px-4 py-8">
   <h3 class="text-[#1c1b0d] dark:text-white text-xl font-bold mb-4">📍 Lokasi Kami</h3>
 
@@ -185,11 +185,11 @@ tailwind.config = {
     </a>
   </div>
 
-  <!-- Copyright di bawah social media -->
+  <!-- Copyright on bottom page -->
   <div class="h-px bg-white/10 w-full mb-2"></div>
   <p class="text-[10px] text-gray-500 uppercase tracking-[0.2em]">© 2026 NIMA JUICE</p>
 </footer>
-<!-- Custom JS -->
+<!-- Custom Javascript -->
 <script src="script.js"></script>
 </body>
 </html>
