--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@ tailwind.config = {
 <body class="bg-background-light dark:bg-background-dark text-[#1c1b0d] font-display overflow-x-hidden">
 
 <!-- Top Navigation Bar -->
-<div class="fixed top-0 left-0 right-0 z-50 flex items-center bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-md p-4 justify-between border-b border-primary/10">
-<h2 class="text-[#1c1b0d] dark:text-white text-lg font-bold leading-tight tracking-[-0.015em] flex-1 text-center">NIMA JUICE</h2>
+<div class="navbar fixed top-0 left-0 right-0 z-50 flex items-center
+             bg-primary dark:bg-primary p-6 
+             justify-between border-b border-primary/10 transition-all duration-300"></div>
+  <h2 class="text-[#1c1b0d] dark:text-white text-xl font-bold flex-1 text-center">NIMA JUICE</h2>
 </div>
+
 
 <!-- Hero Section -->
 <div class="relative min-h-screen flex flex-col pt-16">
